--- a/usabilidad.html
+++ b/usabilidad.html
@@ -68,7 +68,7 @@
             <br>
 
             
-            <p class="h3 bg-primary"><u>Visibilidad.¿Qué es?</u></p>
+            <p class="h3 bg-primary"><u>Usabilidad.¿Qué es?</u></p>
 
             <p>En resumen,la Usabilidad es aplicar el sentido común.</p>
 
